--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@feathersjs/client": "^5.0.0-pre.15",
+    "figbird": "^0.10.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
+    "eslint": "8.5.0",
     "eslint-config-next": "12.0.7"
   }
 }
