--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitecrowds-frontend",
+  "name": "my-app",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,15 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@feathersjs/client": "^5.0.0-pre.15",
-    "figbird": "^0.10.0",
+    "@codemirror/lang-javascript": "^0.19.4",
+    "@syncedstore/core": "^0.3.5",
+    "@syncedstore/react": "^0.3.5",
+    "@uiw/react-codemirror": "^4.3.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "socket.io-client": "^4.4.0"
+    "y-codemirror.next": "^0.1.1",
+    "y-websocket": "^1.3.18",
+    "yjs": "^13.5.23"
   },
   "devDependencies": {
-    "eslint": "8.5.0",
+    "eslint": "8.6.0",
     "eslint-config-next": "12.0.7"
   }
 }
