--- a/package.json
+++ b/package.json
@@ -8,7 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@codemirror/lang-javascript": "^0.19.4",
+    "@codemirror/lang-cpp": "^0.19.1",
+    "@codemirror/lang-css": "^0.19.3",
+    "@codemirror/lang-html": "^0.19.4",
+    "@codemirror/lang-java": "^0.19.1",
+    "@codemirror/lang-javascript": "^0.19.6",
+    "@codemirror/lang-json": "^0.19.1",
+    "@codemirror/lang-lezer": "^0.19.1",
+    "@codemirror/lang-markdown": "^0.19.4",
+    "@codemirror/lang-php": "^0.19.1",
+    "@codemirror/lang-python": "^0.19.2",
+    "@codemirror/lang-rust": "^0.19.1",
+    "@codemirror/lang-sql": "^0.19.4",
+    "@codemirror/lang-wast": "^0.19.0",
+    "@codemirror/lang-xml": "^0.19.2",
     "@syncedstore/core": "^0.3.5",
     "@syncedstore/react": "^0.3.5",
     "@uiw/react-codemirror": "^4.3.2",
