--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@syncedstore/react": "^0.3.5",
     "@uiw/react-codemirror": "^4.3.2",
     "next": "12.0.7",
+    "p-min-delay": "^4.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "y-codemirror.next": "^0.1.1",
