--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "bytecrowds",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,37 +8,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.4",
-    "@codemirror/lang-cpp": "^6.0.1",
-    "@codemirror/lang-css": "^6.0.0",
-    "@codemirror/lang-html": "^6.1.0",
-    "@codemirror/lang-java": "^6.0.0",
-    "@codemirror/lang-javascript": "^6.0.2",
-    "@codemirror/lang-json": "^6.0.0",
-    "@codemirror/lang-lezer": "^6.0.0",
-    "@codemirror/lang-markdown": "^6.0.0",
-    "@codemirror/lang-php": "^6.0.0",
-    "@codemirror/lang-python": "^6.0.1",
-    "@codemirror/lang-rust": "^6.0.0",
-    "@codemirror/lang-sql": "^6.0.0",
-    "@codemirror/lang-wast": "^6.0.0",
-    "@codemirror/lang-xml": "^6.0.0",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@syncedstore/core": "^0.4.1",
-    "@syncedstore/react": "^0.4.1",
-    "@uiw/react-codemirror": "^4.11.4",
-    "ably": "^1.2.27",
-    "framer-motion": "^6.5.1",
-    "next": "^12.2.3",
+    "@chakra-ui/react": "^2.3.7",
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-css": "^6.0.1",
+    "@codemirror/lang-html": "^6.1.3",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.1.1",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-lezer": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.0.4",
+    "@codemirror/lang-php": "^6.0.1",
+    "@codemirror/lang-python": "^6.0.4",
+    "@codemirror/lang-rust": "^6.0.1",
+    "@codemirror/lang-sql": "^6.3.2",
+    "@codemirror/lang-wast": "^6.0.1",
+    "@codemirror/lang-xml": "^6.0.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@syncedstore/core": "^0.4.2",
+    "@syncedstore/react": "^0.4.2",
+    "@uiw/react-codemirror": "^4.13.0",
+    "ably": "^1.2.31",
+    "framer-motion": "^7.6.5",
+    "next": "^13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "ws": "^8.8.1",
-    "y-codemirror.next": "^0.3.0",
-    "yjs": "^13.5.39"
+    "ws": "^8.11.0",
+    "y-codemirror.next": "^0.3.2",
+    "yjs": "^13.5.42"
   },
   "devDependencies": {
-    "eslint": "8.20.0",
-    "eslint-config-next": "^12.2.3"
+    "eslint": "8.27.0",
+    "eslint-config-next": "^13.0.2"
   }
 }
