--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@upstash/redis": "^1.18.5",
     "ably": "^1.2.34",
     "framer-motion": "^8.2.4",
+    "logrocket": "^4.0.4",
     "next": "^13.1.1",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
