--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.7.1",
     "@codemirror/lang-cpp": "^6.0.2",
-    "@codemirror/lang-css": "^6.2.0",
+    "@codemirror/lang-css": "6.3.1",
     "@codemirror/lang-html": "^6.4.5",
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.1.9",
@@ -25,6 +25,7 @@
     "@codemirror/lang-xml": "^6.0.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@lezer/lr": "^1.4.2",
     "@next-auth/upstash-redis-adapter": "^3.0.4",
     "@syncedstore/core": "^0.5.2",
     "@syncedstore/react": "^0.5.2",
@@ -33,8 +34,8 @@
     "ably": "^1.2.41",
     "framer-motion": "^10.12.22",
     "logrocket": "^4.0.4",
-   "next": "^15.2.4",
-    "next-auth": "^4.24.11",
+    "next": "13.5.9",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ws": "^8.13.0",
